@@ -289,7 +289,7 @@ function interpolation_methods.bspline(state, x_locs, y_locs, num_locs )
 		end
 
 		if num_locs < 4 then
-			helper.wml_error("[animate_path]: A B-spline path requires at least 4 points be specified")
+			wml.error("[animate_path]: A B-spline path requires at least 4 points be specified")
 		end
 
 		return calc_uniform_path_length, reached_point, get_location
@@ -302,7 +302,7 @@ function interpolation_methods.parabola(state, x_locs, y_locs, num_locs )
 	-- either increasing or decreasing order (second assumption allows determination of direction of travel)
 	return function ()
 		if num_locs ~= 3 then
-			helper.wml_error("[animate_path]: A parabola requires that exactly 3 points be specified")
+			wml.error("[animate_path]: A parabola requires that exactly 3 points be specified")
 		end
 		local A
 		A = {{x_locs[0]*x_locs[0], x_locs[0], 1},
@@ -312,7 +312,7 @@ function interpolation_methods.parabola(state, x_locs, y_locs, num_locs )
 		state.b = solve_system(A, state.b)
 		A = nil
 		if state.b == nil then
-			helper.wml_error("[animate_path]: The provided points do not form a parabola")
+			wml.error("[animate_path]: The provided points do not form a parabola")
 		end
 
 		local function get_parabola_path_length()
@@ -411,17 +411,17 @@ end
 
 local function load_path(cfg, container_name)
 	local animation = {}
-	local temp = cfg.image or helper.wml_error(container_name.." missing required image= attribute")
+	local temp = cfg.image or wml.error(container_name.." missing required image= attribute")
 	animation.images, animation.num_images = load_list(temp)
 	animation.linger = cfg.linger
-	temp = cfg.hex_x or helper.wml_error(container_name..": missing required hex_x= attribute")
+	temp = cfg.hex_x or wml.error(container_name..": missing required hex_x= attribute")
 	local hex_x, hex_x_count = load_list(temp)
 	animation.hex_x = hex_x[0]
-	temp = cfg.hex_y or helper.wml_error(container_name..": missing required hex_y= attribute")
+	temp = cfg.hex_y or wml.error(container_name..": missing required hex_y= attribute")
 	local hex_y, hex_y_count = load_list(temp)
 	animation.hex_y = hex_y[0]
 	if hex_x_count ~= hex_y_count then
-		helper.wml_error("The number of hex_x and hex_y values must be the same in "..container_name.." "..hex_x_count.." "..hex_y_count)
+		wml.error("The number of hex_x and hex_y values must be the same in "..container_name.." "..hex_x_count.." "..hex_y_count)
 	end
 
 	temp = cfg.x or "0"
@@ -429,7 +429,7 @@ local function load_path(cfg, container_name)
 	temp = cfg.y or "0"
 	animation.y_locs, animation.num_y_locs = load_list(temp)
 	if animation.num_locs ~= animation.num_y_locs then
-		helper.wml_error("The number of x and y values must be the same in "..container_name)
+		wml.error("The number of x and y values must be the same in "..container_name)
 	end
 	animation.transpose = cfg.transpose
 
@@ -454,7 +454,7 @@ local function load_path(cfg, container_name)
 
 	animation.interpolation = cfg.interpolation or "linear"
 	if not interpolation_methods[animation.interpolation] then
-		helper.wml_error(container_name..": Unknown interpolation method: "..animation.interpolation)
+		wml.error(container_name..": Unknown interpolation method: "..animation.interpolation)
 	end
 	if animation.transpose then
 		animation.x_locs, animation.y_locs = animation.y_locs, animation.x_locs
@@ -480,9 +480,9 @@ function wesnoth.wml_actions.animate_path(cfg)
 	animation[1] = load_path(cfg, "[animate_path]")
 	local frames = tonumber(cfg.frames) or animation[1].num_images
 	if frames < 2 then
-		helper.wml_error("[animate_path] requires frames be at least 2")
+		wml.error("[animate_path] requires frames be at least 2")
 	end
-	local delay = tonumber(cfg.frame_length) or helper.wml_error("Missing required frame_length= attribute in [animate_path]")
+	local delay = tonumber(cfg.frame_length) or wml.error("Missing required frame_length= attribute in [animate_path]")
 	local num_animations = 1
 	for extra_path in wml.child_range(cfg, "extra_path") do
 		num_animations = num_animations + 1
